--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/config.inc.php
 ./build
 temp
 /files
@@ -22,3 +21,4 @@ cypress/screenshots/
 .phpunit.result.cache
 /plugins/themes/default/js/lib/swiper/
 registry/uiLocaleKeysBackend.json
+.idea
